Fixed ADB helper not worked on launching jar Commit-16 -Tested safe to merge